--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ devices by scanning this QR code:
     let url = params.get("url")
     let path = loc.path
     console.log(path)
-    if(url != null){
+    if(url && hash){
+        url = checkUrl(url)
         localStorage.setItem(hash, url)
     }
     let link = localStorage.getItem(hash)
@@ -70,11 +71,24 @@ devices by scanning this QR code:
     let button = document.getElementById("go")
     button.addEventListener("click", () => {
         let hash = document.getElementById("hash").value
-        let link = document.getElementById("link").value        
-        if(hash && link){
+        let link = document.getElementById("link").value 
+        link = checkUrl(link)    
+        if(hash && link != false){
             localStorage.setItem(hash, link)
             location.replace(link)
         }
     })
+    function checkUrl(url){
+        let regEx = /^https?:\/\/(?:www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)$/gm;
+
+        if (regEx.test(url)) {
+            return url
+        } else {
+            alert("Please enter a complete url! (e.g. https://www.example.com)")
+            link = false
+            return link
+        }
+    }
+
 </script>
 </html>
