--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Save website addresses and easily visit them using a #hashtag of your choice . .
     </div>
     <div>
         <pre>
-Access your saved website by adding your hashtag to the url https://www.addy.pw.
+Visit your saved website by adding your hashtag to the url https://www.addy.pw.
 
     Example: 
     https://www.addy.pw<span style="color: blue">#MemorableHashtag</span>
