--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@ You can also create new addy hashtags by typing this in your address bar:
     Example: 
     https://www.addy.pw<span style="color: red">?url=www.yourcoolurl.com</span><span style="color: blue">#MemorableHashtag</span>
         
-Your addy hashtags are only stored on your device, but you can sync them between 
+Your addy hashtags are only accessibly from this device, but you can sync/share them between 
 devices by scanning this QR code:
+
+Or by sharing this link: 
         </pre>
     </div>
 </body>
