--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <pre>
 <h1>#Hashtag your bookmarks!</h1>
 
-Save website addresses and easily visit them using a #hashtag of your choice . . .
+Save website addresses and easily visit them using your custom #hashtags . . .
         </pre>
     </div>
     <div>
