--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div>
         <pre>
-<h1>#Hashtag your bookmarks!</h1>
+<h1>#Hashtag your addy's!</h1>
 
 Save website addresses and easily visit them using your custom #hashtags . . .
         </pre>
