--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <pre>
 <h1>#Hashtag your addy's!</h1>
 
-Save website addresses and easily visit them using your custom #hashtags . . .
+Save website addresses and easily visit them using your custom Addy #hashtags . . .
         </pre>
     </div>
     <div>
@@ -42,12 +42,12 @@ Visit your saved website by adding your hashtag to the url <span style="color: o
     Example: 
     <span style="color: orange">https://www.addy.pw</span><span style="color: blue">#MemorableHashtag</span>
 
-You can also create new addy hashtags by typing this in your address bar:
+You can also create new Addy hashtags by typing this in your address bar:
 
     Example: 
     <span style="color: orange">https://www.addy.pw</span><span style="color: red">?url=https://www.yourcoolurl.com</span><span style="color: blue">#MemorableHashtag</span>
         
-Your addy hashtags are only accessibly from this device, but you can sync/share 
+Your Addy hashtags are only accessibly from this device, but you can sync/share 
 them between devices by scanning this QR code:
             <span id="share-qr"></span>
 Or by sharing this link:
