--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@ Or by sharing this link:
         console.log(bugout)
 
         //var b = new Bugout(bugout || {seed: localStorage.getItem("bugout-server-seed")})
-        var b = new Bugout(bugout)       
         let address = localStorage.getItem("address")
+
+        var b = new Bugout(bugout || address)       
+
         if(!address){
             localStorage.setItem("address", b.address())
             address = b.address()
