--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Or by sharing this link:
         console.log(archive)
         return archive
     }
-    allStorage()
+
     document.addEventListener('DOMContentLoaded', async () => {
         let site = "https://www.addy.pw"
         let bugout = params.get("b")
@@ -157,8 +157,8 @@ Or by sharing this link:
 
         // whenever we see a new client in this swarm
         b.on("seen", function(address) {
-            b.send({"hello": "all!"});
-            console.log("User joined!")
+            let addys = allStorage()
+            b.send(addys);
         // e.g. send a message to the client we've seen with this address
         });
     })
