--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Or by sharing this link:
             if(message.length > 0){
                 console.log("got some stuff to share!")
                 message.forEach(element => {
-                    console.log(element.key)
+                    console.log(element[0].key)
                 });
             }
         });
