--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Or by sharing this link:
                 console.log("got some stuff to share!")
                 message.forEach( (element, index) => {
                     console.log(index)
-                    console.log(element[1].key)
+                    console.log(element[index].key)
                 });
             }
         });
