--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <body>
     <div>
         <pre>
-<h1>#Hashtag your addy's!</h1>
+<h1>Addy #Hashtags</h1>
 
-Save website addresses and easily visit them using your custom Addy #hashtags . . .
+Save website addresses and visit them using custom Addy #hashtags . . .
         </pre>
     </div>
     <div>
@@ -51,7 +51,7 @@ Your Addy hashtags are only accessibly from this device, but you can sync/share
 them between devices by scanning this QR code:
 
             <span id="share-qr"></span>
-            
+
 Or by sharing this link:
             <span id="share-link"></span>
         </pre>
