--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <pre>
 <h1>Addy #Hashtags</h1>
 
-Save website addresses and visit them using custom Addy #hashtags . . .
+Bookmarks in your browser are boring.
+
+Save website addresses and visit them with custom Addy #hashtags, instead!
         </pre>
     </div>
     <div>
