--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Bookmarks in your browser are boring.
 Save website addresses and visit them with custom Addy #hashtags, instead!
         </pre>
     </div>
-    <div style="background-color: orange">
+    <div>
         <input id="hash" type="text" placeholder="#hashtag"><br>
         <input id="link" type="text" placeholder="https://www.google.com"><br>
         <button id="go">Save and Go!</button>
