--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ You can also create new Addy hashtags by typing this in your address bar:
     Example: 
     <span style="color: orange">https://www.addy.pw</span><span style="color: red">?url=https://www.yourcoolurl.com</span><span style="color: blue">#MemorableHashtag</span>
         
-Your Addy hashtags are only accessibly from this device, but you can sync/share 
+Your Addy hashtags are only available on this device, but you can sync/share 
 them between devices by scanning this QR code:
 
     <span id="share-qr"></span>
