--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ You can also create new Addy hashtags by typing this in your address bar:
     <span style="color: orange">https://www.addy.pw</span><span style="color: red">?url=https://www.yourcoolurl.com</span><span style="color: blue">#MemorableHashtag</span>
         
 Your Addy hashtags are only available on this device, but you can sync/share 
-them between devices by scanning this QR code:
+them between your other devices by scanning this QR code:
 
     <span id="share-qr"></span>
 
