--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Or by sharing this link:
     </div>
 </body>
 <script>
+    localStorage.setItem("#addy","https://www.addy.pw/#addy")
     let params = new URL(window.location).searchParams;
     let loc = window.location
     let hash = loc.hash;
