--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ Or by sharing this link:
                     localStorage.setItem(element.key, element.value)
                 });
             }
+            console.log("Addy #Hashtags synced!")
         });
 
         b.on("seen", (address) => {
