--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div>
         <pre>
 <h1>Addy #Hashtags</h1>
-
+<h5>Device sync pending . . . </h5>
 Bookmarks in your browser are boring.
 
 Save website addresses and visit them with custom Addy #hashtags, instead!
