--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Or by sharing this link:
         </pre>
     </div>
 
-<h5 id="sync">Device sync pending . . . </h5>
+<h5 id="sync">(Device sync pending . . . )</h5>
 </body>
 <script>
     localStorage.setItem("#addy","https://www.addy.pw/")
@@ -155,7 +155,7 @@ Or by sharing this link:
                 });
             }
             console.log("Addy #Hashtags synced!")
-            document.getElementById("sync").innerText = "Devices synced!"
+            document.getElementById("sync").innerText = "(Devices synced!)"
         });
 
         b.on("seen", (address) => {
