--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div>
         <pre>
-<h1>Addy #Hashtags</h1>
+<h1>#Hashl.ink</h1>
 Bookmarks in your browser are boring.
 
 Save website addresses and visit them with custom #Hashlinks, instead!
