--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Or by sharing this link:
                 });
             }
             console.log("#Hashlinks synced!")
-            document.getElementById("sync").innerText = "(Devices synced!)"
+            document.getElementById("sync").innerText = "(#Hashlinks synced!)"
         });
 
         b.on("seen", (address) => {
