--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>#hashl.ink</title>
     <script src="https://chr15m.github.io/bugout/bugout.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" 
+    integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" 
+    crossorigin="anonymous">
 </head>
 <style>
     body {
