--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div>
         <pre>
-<h1>#Hashl.ink</h1>
+<h1>#hashl.ink</h1>
 Bookmarks in your browser are boring.
 
 Save website addresses and visit them with custom #Hashlinks, instead!
