--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Or by sharing this link:
         document.getElementById("share-qr").innerHTML = `<img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${shareAddy}">`
 
         b.on("message", (address, message) => {
-            if(message.length > 0){
+            if(Array.isArray(message) && message.length > 0){
                 message.forEach( (element, index) => {
                     localStorage.setItem(element.key, element.value)
                 });
