--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Or by sharing this link:
         }
         if(event.key == "h"){
             linkTyping.value = "https://"
-            lynkTyping.removeEventListener("keyup")
+            this.removeEventListener("keyup")
         }
     })
 
