--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Or by sharing this link:
         })
 
         window.onstorage = () => {
-            console.log(localStorage)
+            console.log(...localStorage)
             b.send("Got an updated #hashlink")
         }
 
